# fit-file-viewer

./: QUICK_START.md  QUICK_WINS_IMPLEMENTATION.md  README.md  RUN_ENHANCED_VIEWER.bat  RUN_M31_VIEWER.bat  RUN_VIEWER.bat  RUN_VIEWER_WITH_FILE.bat  main.py  pyproject.toml  requirements.txt  setup.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html
src/: __init__.py  fits_file_manager.py  histogram_widget.py  image_display_engine.py  main_window.py
